tests/fixtures/invalid/none_add_bool.py
# Cannot add None and Bool
x: None = None + True
